--- a/app/src/main/res/layout/activity_gcv3wheeler.xml
+++ b/app/src/main/res/layout/activity_gcv3wheeler.xml
@@ -23,9 +23,8 @@
                     android:id="@+id/carrier_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    style="@style/style_radiogroup_table"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/public_yes"
@@ -50,8 +49,7 @@
                     android:id="@+id/idv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/last_year_idv" />
 
 
@@ -59,8 +57,7 @@
                     android:id="@+id/idv_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -71,8 +68,7 @@
                     android:id="@+id/dateofregistration"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/date_of_registration" />
 
                 <EditText
@@ -80,7 +76,7 @@
                     android:layout_width="0dp"
                     android:focusable="false"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:ems="10"
                     android:inputType="date" />
             </TableRow>
@@ -90,8 +86,7 @@
                     android:id="@+id/zone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zone" />
 
 
@@ -99,8 +94,7 @@
                     android:id="@+id/zone_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+                    style="@style/style_spinner_table"/>
             </TableRow>
 
             <TableRow>
@@ -108,8 +102,7 @@
                     android:id="@+id/discount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/discount_on_od" />
 
 
@@ -117,8 +110,7 @@
                     android:id="@+id/discount_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -129,8 +121,7 @@
                     android:id="@+id/electrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/electrical_accessories_value" />
 
 
@@ -138,8 +129,7 @@
                     android:id="@+id/electrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -150,8 +140,7 @@
                     android:id="@+id/nonelectrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/nonelectrical_accessories_value" />
 
 
@@ -159,8 +148,7 @@
                     android:id="@+id/nonelectrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -171,8 +159,7 @@
                     android:id="@+id/ncb"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/no_claim_bonus" />
 
 
@@ -180,8 +167,7 @@
                     android:id="@+id/ncb_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_spinner_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -192,8 +178,7 @@
                     android:id="@+id/zerodep"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zero_depreciation" />
 
 
@@ -201,8 +186,7 @@
                     android:id="@+id/zerodep_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -213,16 +197,14 @@
                     android:id="@+id/cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/cng_lpg" />
 
                 <CheckBox
                     android:id="@+id/yes_cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:text="Yes"/>
             </TableRow>
 
@@ -231,8 +213,7 @@
                     android:id="@+id/extcng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="External CNG/LPG Kit Value" />
 
 
@@ -240,8 +221,7 @@
                     android:id="@+id/extcng_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:enabled="false"
@@ -253,8 +233,7 @@
                     android:id="@+id/patoownerdriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/pa_to_owner_driver" />
 
 
@@ -262,8 +241,7 @@
                     android:id="@+id/patoownerdriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -274,8 +252,7 @@
                     android:id="@+id/lltopaiddriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/ll_to_paid_driver" />
 
 
@@ -283,8 +260,7 @@
                     android:id="@+id/lltopaiddriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -295,8 +271,7 @@
                     android:id="@+id/restricttppd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/restrict_tppd" />
 
 
@@ -304,8 +279,7 @@
                     android:id="@+id/restricttppd_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes"
@@ -330,8 +304,7 @@
                     android:id="@+id/imt23"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/imt_23" />
 
 
@@ -339,8 +312,7 @@
                     android:id="@+id/imt23_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes_imt"
@@ -371,8 +343,7 @@
             app:layout_constraintTop_toBottomOf="@id/table"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            style="@style/style_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
