--- a/app/src/main/res/layout/activity_gcv.xml
+++ b/app/src/main/res/layout/activity_gcv.xml
@@ -23,9 +23,8 @@
                     android:id="@+id/carrier_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    style="@style/style_radiogroup_table"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/public_yes"
@@ -50,17 +49,14 @@
                     android:id="@+id/idv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/last_year_idv" />
-
 
                 <EditText
                     android:id="@+id/idv_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -71,8 +67,7 @@
                     android:id="@+id/dateofregistration"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/date_of_registration" />
 
                 <EditText
@@ -80,7 +75,7 @@
                     android:layout_width="0dp"
                     android:focusable="false"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:ems="10"
                     android:inputType="date" />
             </TableRow>
@@ -90,8 +85,7 @@
                     android:id="@+id/zone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zone" />
 
 
@@ -99,8 +93,7 @@
                     android:id="@+id/zone_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+                    style="@style/style_spinner_table"/>
             </TableRow>
 
             <TableRow>
@@ -108,16 +101,14 @@
                     android:id="@+id/gvw"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/gross_vehicle_weight_kgs" />
 
                 <EditText
                     android:id="@+id/gvw_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -128,8 +119,7 @@
                     android:id="@+id/discount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/discount_on_od" />
 
 
@@ -137,8 +127,7 @@
                     android:id="@+id/discount_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -149,8 +138,7 @@
                     android:id="@+id/electrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/electrical_accessories_value" />
 
 
@@ -158,8 +146,7 @@
                     android:id="@+id/electrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -170,8 +157,7 @@
                     android:id="@+id/nonelectrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/nonelectrical_accessories_value" />
 
 
@@ -179,8 +165,7 @@
                     android:id="@+id/nonelectrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -191,8 +176,7 @@
                     android:id="@+id/ncb"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/no_claim_bonus" />
 
 
@@ -200,8 +184,7 @@
                     android:id="@+id/ncb_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_spinner_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -212,8 +195,7 @@
                     android:id="@+id/zerodep"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zero_depreciation" />
 
 
@@ -221,8 +203,7 @@
                     android:id="@+id/zerodep_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -233,8 +214,7 @@
                     android:id="@+id/geoext"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/geographical_extension" />
 
 
@@ -243,8 +223,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Yes"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:ems="10"/>
             </TableRow>
 
@@ -253,16 +232,14 @@
                     android:id="@+id/cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/cng_lpg" />
 
                 <CheckBox
                     android:id="@+id/yes_cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:text="Yes"/>
             </TableRow>
 
@@ -271,8 +248,7 @@
                     android:id="@+id/extcng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="External CNG/LPG Kit Value" />
 
 
@@ -280,8 +256,7 @@
                     android:id="@+id/extcng_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:enabled="false"
@@ -293,8 +268,7 @@
                     android:id="@+id/patoownerdriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/pa_to_owner_driver" />
 
 
@@ -302,8 +276,7 @@
                     android:id="@+id/patoownerdriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -314,8 +287,7 @@
                     android:id="@+id/lltopaiddriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/ll_to_paid_driver" />
 
 
@@ -323,8 +295,7 @@
                     android:id="@+id/lltopaiddriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -335,16 +306,14 @@
                     android:id="@+id/nfpp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/non_faring_passenger_nfpp" />
 
                 <EditText
                     android:id="@+id/nfpp_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -355,8 +324,7 @@
                     android:id="@+id/restricttppd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/restrict_tppd" />
 
 
@@ -364,8 +332,7 @@
                     android:id="@+id/restricttppd_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes"
@@ -390,8 +357,7 @@
                     android:id="@+id/imt23"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/imt_23" />
 
 
@@ -399,8 +365,7 @@
                     android:id="@+id/imt23_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes_imt"
@@ -431,8 +396,7 @@
             app:layout_constraintTop_toBottomOf="@id/table"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            style="@style/style_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
