--- a/app/src/main/res/layout/activity_misc.xml
+++ b/app/src/main/res/layout/activity_misc.xml
@@ -23,8 +23,7 @@
                     android:id="@+id/idv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/last_year_idv" />
 
 
@@ -32,8 +31,7 @@
                     android:id="@+id/idv_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -44,8 +42,7 @@
                     android:id="@+id/dateofregistration"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/date_of_registration" />
 
                 <EditText
@@ -53,7 +50,7 @@
                     android:layout_width="0dp"
                     android:focusable="false"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:ems="10"
                     android:inputType="date" />
             </TableRow>
@@ -63,8 +60,7 @@
                     android:id="@+id/zone"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zone" />
 
 
@@ -72,33 +68,28 @@
                     android:id="@+id/zone_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+                    style="@style/style_spinner_table"/>
             </TableRow>
 
             <TableRow>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/choose_vehicle" />
-
 
                 <Spinner
                     android:id="@+id/vehicle_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+                    style="@style/style_spinner_table"/>
             </TableRow>
 
             <TableRow>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="Choose Vehicle use" />
 
 
@@ -106,8 +97,7 @@
                     android:id="@+id/vehicleuse_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"/>
+                    style="@style/style_spinner_table"/>
             </TableRow>
 
             <TableRow>
@@ -115,8 +105,7 @@
                     android:id="@+id/discount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/discount_on_od" />
 
 
@@ -124,8 +113,7 @@
                     android:id="@+id/discount_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -136,8 +124,7 @@
                     android:id="@+id/electrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/electrical_accessories_value" />
 
 
@@ -145,8 +132,7 @@
                     android:id="@+id/electrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -157,8 +143,7 @@
                     android:id="@+id/nonelectrical_accessories"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/nonelectrical_accessories_value" />
 
 
@@ -166,8 +151,7 @@
                     android:id="@+id/nonelectrical_accessories_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -178,8 +162,7 @@
                     android:id="@+id/ncb"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/no_claim_bonus" />
 
 
@@ -187,8 +170,7 @@
                     android:id="@+id/ncb_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_spinner_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -199,8 +181,7 @@
                     android:id="@+id/zerodep"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/zero_depreciation" />
 
 
@@ -208,8 +189,7 @@
                     android:id="@+id/zerodep_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -220,18 +200,15 @@
                     android:id="@+id/geoext"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/geographical_extension" />
-
 
                 <CheckBox
                     android:id="@+id/geoext_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Yes"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:ems="10"/>
             </TableRow>
 
@@ -239,16 +216,14 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/cng_lpg" />
 
                 <CheckBox
                     android:id="@+id/yes_cng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:text="Yes"/>
             </TableRow>
 
@@ -257,8 +232,7 @@
                     android:id="@+id/extcng"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="External CNG/LPG Kit Value" />
 
 
@@ -266,8 +240,7 @@
                     android:id="@+id/extcng_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:enabled="false"
@@ -278,16 +251,14 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/cover_overturning" />
 
                 <CheckBox
                     android:id="@+id/yes_overturning"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_checkbox_table"
                     android:text="Yes"/>
             </TableRow>
 
@@ -296,8 +267,7 @@
                     android:id="@+id/patoownerdriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/pa_to_owner_driver" />
 
 
@@ -305,8 +275,7 @@
                     android:id="@+id/patoownerdriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -317,8 +286,7 @@
                     android:id="@+id/lltopaiddriver"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/ll_to_paid_driver" />
 
 
@@ -326,8 +294,7 @@
                     android:id="@+id/lltopaiddriver_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_edittext_table"
                     android:autofillHints=""
                     android:ems="10"
                     android:inputType="numberDecimal"/>
@@ -338,8 +305,7 @@
                     android:id="@+id/restricttppd"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/restrict_tppd" />
 
 
@@ -347,20 +313,19 @@
                     android:id="@+id/restricttppd_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yes"></RadioButton>
+                        android:text="Yes"/>
                     <RadioButton
                         android:id="@+id/no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="No"
-                        android:checked="true"></RadioButton>
+                        android:checked="true"/>
                 </RadioGroup>
             </TableRow>
 
@@ -369,8 +334,7 @@
                     android:id="@+id/imt23"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_leftweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_textbox_table"
                     android:text="@string/imt_23" />
 
 
@@ -378,20 +342,19 @@
                     android:id="@+id/imt23_value"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="@dimen/table_cell_rightweightfortwowheeler"
-                    android:layout_margin="@dimen/table_cell_marginfortwowheeler"
+                    style="@style/style_radiogroup_table"
                     android:orientation="horizontal">
                     <RadioButton
                         android:id="@+id/yes_imt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Yes"></RadioButton>
+                        android:text="Yes"/>
                     <RadioButton
                         android:id="@+id/no_imt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="No"
-                        android:checked="true"></RadioButton>
+                        android:checked="true"/>
                 </RadioGroup>
             </TableRow>
 
@@ -406,8 +369,7 @@
             app:layout_constraintTop_toBottomOf="@id/table"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            style="@style/style_button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
