--- a/app/src/main/res/layout/activity_taxilessthan6_breakup.xml
+++ b/app/src/main/res/layout/activity_taxilessthan6_breakup.xml
@@ -34,14 +34,12 @@
                 <TextView
                     android:text="IDV:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/idv_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0000.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -49,14 +47,12 @@
                 <TextView
                     android:text="Date of Registration:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/dateofregistration_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="00-00-0000"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -64,14 +60,12 @@
                 <TextView
                     android:text="Zone:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/zone_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="B"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -79,14 +73,12 @@
                 <TextView
                     android:text="Cubic Capacity:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/cc_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -94,14 +86,12 @@
                 <TextView
                     android:text="No. of Passengers:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/passenger_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -126,19 +116,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/od_premium_heading"
             app:layout_constraintBottom_toTopOf="@id/tp_premium_heading">
-
             <TableRow>
                 <TextView
                     android:text="Vehicle Basic Rate:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/rate_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -146,29 +133,25 @@
                 <TextView
                     android:text="Basic OD for Vehicle:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/basicod_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
             <TableRow>
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
                     android:text="Electrical Accessories Value(@4%):"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/elec_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -177,15 +160,13 @@
                 <TextView
                     android:id="@+id/nonelecdisplay"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="Non Electrical Accessories Value:" />
                 <TextView
                     android:id="@+id/nonelec_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -194,15 +175,13 @@
                 <TextView
                     android:id="@+id/imt23display"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="IMT 23 Value(@15%):" />
                 <TextView
                     android:id="@+id/imt23_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -211,14 +190,12 @@
                     android:id="@+id/oddiscdisplay"
                     android:text="OD Discount:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/disc_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -227,15 +204,13 @@
                 <TextView
                     android:id="@+id/ncbdisplay"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="NCB:" />
                 <TextView
                     android:id="@+id/ncb_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -244,14 +219,12 @@
                     android:id="@+id/zerodepdisplay"
                     android:text="Zero Dep Premium:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/zerodep_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -259,14 +232,12 @@
                 <TextView
                     android:text="Total A:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/totala_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -296,14 +267,12 @@
                 <TextView
                     android:text="Liability Premium(TP):"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/basictp_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -311,14 +280,12 @@
                 <TextView
                     android:text="Third Party Property Damage(TPPD):"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/tppd_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -326,14 +293,12 @@
                 <TextView
                     android:text="PA to Owner Driver:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/ownerpa_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -341,14 +306,12 @@
                 <TextView
                     android:text="LL to Paid Driver:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/llpaid_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -356,14 +319,12 @@
                 <TextView
                     android:text="Total B:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/totalb_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -392,16 +353,14 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="Total Package Premium(A+B):" />
 
                 <TextView
                     android:id="@+id/totalab_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
@@ -409,16 +368,14 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="GST(@18%):" />
 
                 <TextView
                     android:id="@+id/gst_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
@@ -426,16 +383,14 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="Final Premium:" />
 
                 <TextView
                     android:id="@+id/finalpremium_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
@@ -446,7 +401,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SHARE"
-            android:layout_margin="30dp"
+            style="@style/style_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/commission_button"
@@ -457,7 +412,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Know Your Commision"
-            android:layout_margin="30dp"
+            style="@style/style_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/share_button"
             app:layout_constraintStart_toStartOf="parent"
