--- a/app/src/main/res/layout/activity_two_wheeler_breakup.xml
+++ b/app/src/main/res/layout/activity_two_wheeler_breakup.xml
@@ -34,14 +34,14 @@
                 <TextView
                     android:text="IDV:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/idv_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0000.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -49,14 +49,14 @@
                 <TextView
                     android:text="Date of Registration:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/dateofregistration_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="00-00-0000"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -64,14 +64,14 @@
                 <TextView
                     android:text="Zone:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/zone_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="B"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -79,14 +79,14 @@
                 <TextView
                     android:text="Cubic Capacity:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/cc_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -116,14 +116,14 @@
                 <TextView
                     android:text="Vehicle Basic Rate:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/rate_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -131,29 +131,29 @@
                 <TextView
                     android:text="Basic OD for Vehicle:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/basicod_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
             <TableRow>
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
+
                     android:text="Electrical Accessories Value(@4%):"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/elec_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -162,15 +162,15 @@
                 <TextView
                     android:id="@+id/nonelecdisplay"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+
+style="@style/style_textbox_table_breakup"
                     android:text="Non Electrical Accessories Value:" />
                 <TextView
                     android:id="@+id/nonelec_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -179,14 +179,14 @@
                     android:id="@+id/oddiscdisplay"
                     android:text="OD Discount:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/disc_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -195,15 +195,15 @@
                 <TextView
                     android:id="@+id/ncbdisplay"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+
+style="@style/style_textbox_table_breakup"
                     android:text="NCB:" />
                 <TextView
                     android:id="@+id/ncb_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -212,14 +212,14 @@
                     android:id="@+id/zerodepdisplay"
                     android:text="Zero Dep Premium:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/zerodep_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -227,14 +227,14 @@
                 <TextView
                     android:text="Total A:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/totala_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -264,14 +264,14 @@
                 <TextView
                     android:text="Liability Premium(TP):"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/basictp_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -279,14 +279,14 @@
                 <TextView
                     android:text="Third Party Property Damage(TPPD):"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/tppd_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -294,14 +294,14 @@
                 <TextView
                     android:text="PA to Owner Driver:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/ownerpa_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -309,14 +309,14 @@
                 <TextView
                     android:text="LL to Paid Driver:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/llpaid_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -324,14 +324,14 @@
                 <TextView
                     android:text="PA to Unnamed Passenger:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/paunnamed_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
 
@@ -339,14 +339,14 @@
                 <TextView
                     android:text="Total B:"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"/>
+
+                    style="@style/style_textbox_table_breakup"/>
                 <TextView
                     android:id="@+id/totalb_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:text="0.00"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:gravity="right"/>
             </TableRow>
         </TableLayout>
@@ -375,16 +375,16 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+
+style="@style/style_textbox_table_breakup"
                     android:text="Total Package Premium(A+B):" />
 
                 <TextView
                     android:id="@+id/totalab_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
@@ -392,16 +392,16 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+
+style="@style/style_textbox_table_breakup"
                     android:text="GST(@18%):" />
 
                 <TextView
                     android:id="@+id/gst_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
@@ -409,16 +409,16 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_leftweight"
-                    android:paddingLeft="@dimen/table_cell_leftmargin"
+
+style="@style/style_textbox_table_breakup"
                     android:text="Final Premium:" />
 
                 <TextView
                     android:id="@+id/finalpremium_value"
                     android:layout_width="0dp"
-                    android:layout_weight="@dimen/table_cell_rightweight"
+
                     android:gravity="right"
-                    android:paddingRight="@dimen/table_cell_rightmargin"
+                    style="@style/style_textbox_table_breakup"
                     android:text="0.00" />
             </TableRow>
 
