--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <dimen name="left_margin">8dp</dimen>
-    <dimen name="vertical_distance">8dp</dimen>
-    <dimen name="edittext_height">50dp</dimen>
-    <dimen name="edittext_width">160dp</dimen>
-    <dimen name="table_cell_padding">2dp</dimen>
-    <dimen name="table_cell_leftmargin">8dp</dimen>
-    <dimen name="table_cell_rightmargin">8dp</dimen>
-    <dimen name="table_cell_leftweight">0.7</dimen>
-    <dimen name="table_cell_rightweight">0.3</dimen>
-    <dimen name="table_cell_leftweightfortwowheeler">0.6</dimen>
-    <dimen name="table_cell_rightweightfortwowheeler">0.4</dimen>
-    <dimen name="table_cell_marginfortwowheeler">5dp</dimen>
+    <dimen name="table_cell_padding">5dp</dimen>
+    <dimen name="table_cell_weight">0.5</dimen>
+    <dimen name="table_cell_margin">3dp</dimen>
+    <dimen name="button_margin">10dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
